opam-version: "2.0"
name: "coq-mathcomp-apery"
maintainer: "Assia.Mahboubi@inria.fr"
homepage: "https://github.com/math-comp/apery"
bug-reports: "https://github.com/math-comp/apery/issues"
dev-repo: "git+https://github.com/math-comp/apery.git"
license: "CeCILL-C"
authors: [
"Frédéric Chyzak"
"Assia Mahboubi"
"Thomas Sibut-Pinote"
]
build: [
  [make "INSTMODE=global" "config"]
  [make "-j%{jobs}%"]
]
install: [
  [make "install"]
]
depends: [
  "coq" {(>= "8.11"}
  "coq-coqeal" {>= "1.0.3"}
  "coq-mathcomp-real-closed" {>= "1.0.4"}
  "coq-mathcomp-bigenough" {>= "1.0.0"}
]

tags: [
  "keyword:apery recurrence"
  "keyword:irrationality"
  "keyword:zeta function"
  "keyword:creative telescoping"
  "category:Math/Arith/Number theory"
  "logpath:mathcomp.apery"
]
synopsis: "A constructive proof by computer algebra that zeta(3) irrational."